--- a/app/src/main/res/layout/dialog_download.xml
+++ b/app/src/main/res/layout/dialog_download.xml
@@ -6,12 +6,14 @@
     android:paddingRight="50dp"
     android:background="#eeeeee">
     <TextView
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="正在下载"
         android:paddingTop="20dp"
         android:textSize="20dp"
+        android:textColor="#222222"
         />
 
     <ProgressBar
@@ -28,5 +30,6 @@
         android:textSize="20dp"
         android:paddingBottom="20dp"
         android:layout_gravity="center_horizontal"
+        android:textColor="#222222"
         />
 </LinearLayout>
